--- a/search.html
+++ b/search.html
@@ -621,32 +621,24 @@
     // VPN Status Check
     async function checkVPNStatus() {
         return new Promise((resolve) => {
-            const xhr = new XMLHttpRequest();
+            const img = new Image();
             const timeoutId = setTimeout(() => {
-                xhr.abort();
+                img.src = '';
                 resolve(false);
-            }, 1500);
+            }, 1000);
 
-            xhr.onreadystatechange = function() {
-                if (xhr.readyState === 4) {
-                    clearTimeout(timeoutId);
-                    resolve(xhr.status === 200);
-                }
+            img.onload = function() {
+                clearTimeout(timeoutId);
+                resolve(true);
             };
 
-            xhr.onerror = function() {
+            img.onerror = function() {
                 clearTimeout(timeoutId);
                 resolve(false);
             };
 
-            try {
-                xhr.open('GET', 'http://10.2.0.100/favicon.ico?' + new Date().getTime(), true);
-                xhr.timeout = 1500;
-                xhr.send();
-            } catch (e) {
-                clearTimeout(timeoutId);
-                resolve(false);
-            }
+            // Try to load a small image from the VPN endpoint
+            img.src = 'http://10.2.0.100/favicon.ico?' + new Date().getTime();
         });
     }
 
