--- a/search.html
+++ b/search.html
@@ -665,6 +665,79 @@
         const tooltip = document.getElementById('vpn-tooltip');
         tooltip.style.display = tooltip.style.display === 'block' ? 'none' : 'block';
     });
+
+    // Voice Search Functionality
+    const voiceIcon = document.querySelector('.voice-icon');
+    let isListening = false;
+    let recognition = null;
+
+    // Initialize speech recognition
+    function initSpeechRecognition() {
+        if ('webkitSpeechRecognition' in window) {
+            recognition = new webkitSpeechRecognition();
+            recognition.continuous = false;
+            recognition.interimResults = false;
+            recognition.lang = 'en-US';
+
+            recognition.onresult = function(event) {
+                const transcript = event.results[0][0].transcript;
+                searchInput.value = transcript;
+                performSearch();
+            };
+
+            recognition.onerror = function(event) {
+                console.error('Speech recognition error:', event.error);
+                isListening = false;
+                updateVoiceIcon();
+            };
+
+            recognition.onend = function() {
+                isListening = false;
+                updateVoiceIcon();
+            };
+        }
+    }
+
+    // Update voice icon appearance
+    function updateVoiceIcon() {
+        const svg = voiceIcon.querySelector('svg');
+        if (isListening) {
+            svg.innerHTML = `
+                <path d="M12 14c1.66 0 3-1.34 3-3V5c0-1.66-1.34-3-3-3S9 3.34 9 5v6c0 1.66 1.34 3 3 3z" fill="#ea4335"/>
+                <path d="M17 11c0 2.76-2.24 5-5 5s-5-2.24-5-5H5c0 3.53 2.61 6.43 6 6.92V21h2v-3.08c3.39-.49 6-3.39 6-6.92h-2z" fill="#ea4335"/>
+            `;
+        } else {
+            svg.innerHTML = `
+                <path d="M12 14c1.66 0 3-1.34 3-3V5c0-1.66-1.34-3-3-3S9 3.34 9 5v6c0 1.66 1.34 3 3 3z" fill="#4285f4"/>
+                <path d="M17 11c0 2.76-2.24 5-5 5s-5-2.24-5-5H5c0 3.53 2.61 6.43 6 6.92V21h2v-3.08c3.39-.49 6-3.39 6-6.92h-2z" fill="#4285f4"/>
+            `;
+        }
+    }
+
+    // Toggle voice recognition
+    function toggleVoiceRecognition() {
+        if (!recognition) {
+            initSpeechRecognition();
+        }
+
+        if (isListening) {
+            recognition.stop();
+        } else {
+            try {
+                recognition.start();
+                isListening = true;
+                updateVoiceIcon();
+            } catch (error) {
+                console.error('Error starting speech recognition:', error);
+            }
+        }
+    }
+
+    // Add click handler for voice icon
+    voiceIcon.addEventListener('click', toggleVoiceRecognition);
+
+    // Initialize speech recognition on page load
+    window.addEventListener('load', initSpeechRecognition);
     </script>
 </body>
 </html> 
