--- a/search.html
+++ b/search.html
@@ -686,14 +686,20 @@
         
         elements.searchButton.addEventListener('click', performSearch);
 
-        // VPN Status Check with improved performance
-        async function checkVPNStatus() {
+        // VPN Status Check with improved performance and reliability
+        async function checkVPNStatus(retryCount = 0) {
             return new Promise((resolve) => {
                 const img = new Image();
                 const timeoutId = setTimeout(() => {
                     img.src = '';
-                    resolve(false);
-                }, 1500); // Reduced timeout for faster response
+                    if (retryCount < 2) { // Retry up to 2 times
+                        setTimeout(() => {
+                            checkVPNStatus(retryCount + 1).then(resolve);
+                        }, 1000); // Wait 1 second before retry
+                    } else {
+                        resolve(false);
+                    }
+                }, 1500);
 
                 img.onload = function() {
                     clearTimeout(timeoutId);
@@ -702,7 +708,13 @@
 
                 img.onerror = function() {
                     clearTimeout(timeoutId);
-                    resolve(false);
+                    if (retryCount < 2) { // Retry up to 2 times
+                        setTimeout(() => {
+                            checkVPNStatus(retryCount + 1).then(resolve);
+                        }, 1000); // Wait 1 second before retry
+                    } else {
+                        resolve(false);
+                    }
                 };
 
                 img.src = 'data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7';
@@ -710,7 +722,13 @@
                     try {
                         img.src = 'http://10.2.0.100/favicon.ico?' + new Date().getTime();
                     } catch (e) {
-                        resolve(false);
+                        if (retryCount < 2) { // Retry up to 2 times
+                            setTimeout(() => {
+                                checkVPNStatus(retryCount + 1).then(resolve);
+                            }, 1000); // Wait 1 second before retry
+                        } else {
+                            resolve(false);
+                        }
                     }
                 }, 0);
             });
@@ -723,8 +741,15 @@
             elements.vpnTooltip.textContent = 'Private VPN is ' + (isConnected ? 'connected' : 'disconnected');
         }
 
-        // Check VPN status every 30 seconds
-        updateVPNStatus();
+        // Initial VPN status check with delay
+        window.addEventListener('load', () => {
+            // Wait for 1 second after page load before first check
+            setTimeout(() => {
+                updateVPNStatus();
+            }, 1000);
+        });
+
+        // Regular status checks every 30 seconds
         setInterval(updateVPNStatus, 30000);
 
         // Add click handler for VPN status
