--- a/search.html
+++ b/search.html
@@ -286,6 +286,10 @@
             .logo svg path {
                 fill: #ffffff;
             }
+
+            .voice-icon svg path {
+                fill: #ffffff;
+            }
         }
 
         /* Responsive design */
@@ -295,14 +299,7 @@
             }
 
             .search-buttons {
-            flex-direction: column;
-            align-items: center;
-                gap: 10px;
-            }
-
-            .search-btn {
-                width: 100%;
-                max-width: 200px;
+                display: none;
             }
 
             .logo {
@@ -436,6 +433,10 @@
                 <a href="http://10.2.0.100/admin" class="app-item">
                     <img src="https://cdn.jsdelivr.net/gh/selfhst/icons/svg/wireguard.svg" width="24" height="24" alt="VPN">
                     <span>VPN</span>
+                </a>
+                <a href="https://music.tarunx.me" class="app-item">
+                    <img src="https://cdn.jsdelivr.net/gh/selfhst/icons/svg/apple-music.svg" width="24" height="24" alt="Music">
+                    <span>Add Music</span>
                 </a>
             </div>
         </div>
