--- a/search.html
+++ b/search.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
+    <link rel="icon" type="image/png" href="https://betterstack.com/cdn-cgi/image/width=200,height=29,fit=contain,quality=,dpr=2,format=auto/https://d1lppblt9t2x15.cloudfront.net/logos/5eed931521d72912e2dd94d9fbe3e5b5.png">
     <style>
         :root {
             /* Light mode variables */
