--- a/hbdpooja.html
+++ b/hbdpooja.html
@@ -135,6 +135,11 @@ body {
   height: auto;
 }
 
+.six .lydia-dp {
+  max-width: 70%;
+  height: auto;
+}
+
 .six .hat {
   position: absolute;
   width: 80px;
