--- a/hbdpooja.html
+++ b/hbdpooja.html
@@ -143,7 +143,7 @@ body {
 .six .hat {
   position: absolute;
   width: 80px;
-  top: -35px;
+  top: -55px;
   left: 41.5%;
   /* transform: scale(0.1); */
 }
@@ -486,8 +486,7 @@ body {
       </svg>
     </div>
     <div class="nine">
-      <p data-node-name="outroText">Okay, now come back and tell me if you liked it.</p>
-      <p id="replay" data-node-name="replayText">Or click, if you want to watch it again.</p>
+      <p data-node-name="outroText">Pizza's on me :)</p>
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
     </div>
     <div class="gift-card">
@@ -499,7 +498,7 @@ body {
         <div class="card-details">
           <p><strong>Voucher Number:</strong> ZOM-1234-5678-9012</p>
           <p><strong>PIN Code:</strong> 3456</p>
-          <p><strong>Valid Until:</strong> December 31, 2025</p>
+          <p><strong>How to Redeem:</strong> Zomato App > Profile > Claim Gift Card</p>
         </div>
       </div>
     </div>
