--- a/hbdpooja.html
+++ b/hbdpooja.html
@@ -496,8 +496,8 @@ body {
         </div>
         <h3>Gift Card</h3>
         <div class="card-details">
-          <p><strong>Voucher Number:</strong> ZOM-1234-5678-9012</p>
-          <p><strong>PIN Code:</strong> 3456</p>
+          <p><strong>Voucher Number:</strong> 6004 8600 4323 3970</p>
+          <p><strong>PIN Code:</strong> 1314 97</p>
           <p><strong>How to Redeem:</strong> Zomato App > Profile > Claim Gift Card</p>
         </div>
       </div>
